force-app/main/default/objects/Case_Interaction__c/Case_Interaction__c.object-meta.xml
<CustomObject>
    <label>Case Interaction</label>
    <nameField>
        <displayFormat>CI{000000}</displayFormat>
        <label>Case Interaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Interactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>