force-app/main/default/objects/Case_Interaction__c/fields/Interaction_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Datetime__c</fullName>
    <label>Interaction Date/Time</label>
    <type>DateTime</type>
</CustomField>