force-app/main/default/objects/Case_Interaction__c/fields/Recipient__c.field-meta.xml
<CustomField>
    <fullName>Recipient__c</fullName>
    <label>Recipient</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Interaction_Parties</valueSetName>
    </valueSet>
</CustomField>